--- a/Pages/MainMenuPage.xaml
+++ b/Pages/MainMenuPage.xaml
@@ -11,7 +11,7 @@
     <Grid Background="#FFDDDDDD">
         <Button x:Name="OrdersBtn" Content="Orders" HorizontalAlignment="Left" Margin="262,104,0,0" VerticalAlignment="Top" Height="45" Width="193" Background="#FFB2B2B2" FontFamily="Arial" FontSize="16" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5">
         </Button>
-        <Button x:Name="ProductsBtn" Content="Products" HorizontalAlignment="Left" Margin="262,178,0,0" VerticalAlignment="Top" Height="45" Width="193" Background="#FFB2B2B2" FontFamily="Arial" FontSize="16" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5"/>
+        <Button x:Name="ProductsBtn" Content="Products" HorizontalAlignment="Left" Margin="262,178,0,0" VerticalAlignment="Top" Height="45" Width="193" Background="#FFB2B2B2" FontFamily="Arial" FontSize="16" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5" Click="ProductsBtn_Click"/>
         <Button x:Name="MaterialsBtn" Content="Materials" HorizontalAlignment="Left" Margin="262,253,0,0" VerticalAlignment="Top" Height="45" Width="193" Background="#FFB2B2B2" FontFamily="Arial" FontSize="16" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5" Click="MaterialsBtn_Click"/>
         <Button x:Name="ConfigBtn" Content="Config" HorizontalAlignment="Left" Margin="10,22,0,0" VerticalAlignment="Top" Height="31" Width="65" Background="#FFB2B2B2" FontFamily="Arial" FontSize="16" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5" Click="ConfigBtn_Click"/>
         <Button x:Name="ExitBtn" Content="Exit" HorizontalAlignment="Left" Margin="317,326,0,0" VerticalAlignment="Top" Height="45" Width="83" Background="#FFB2B2B2" FontFamily="Arial" FontSize="16" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5" Click="ExitBtn_Click"/>
